# Bot_magaz

./: README.md  READMI.mb  base_ts.sqlite  functions.py  info.txt  main.py  menu.py  package.json  pyproject.toml  settings.py
utils2/: config.py  crypto_coins.py
