[tool.poetry]
name = "bot_magaz"
version = "1.2.7"
description = "python main.py"
authors = ["Cicada_3301"]
license = "Corporacion_Cicada_3301"

[tool.poetry.dependencies]
python = "^3.9"
telebot7 = "^0.1"
telebot-utils = "^0.0.8"
pyTelegramBotAPI-markups = "^0.0.4"
sdtg = "^1.1.3"
aiogram = "^2.13"
requests = "^2.25.1"
Menu = "^3.2.2"
main = "^0.1"
settings-loader = "^0.1.4"
functions = "^0.7.0"
ts = "^0.5.1"
sqlite3-api = "^2.0.1"
sqlite3server = "^0.1.3"
SQLite3Database = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
